--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,13 +1,39 @@
-.card {
+.loader-card {
     width: 250px;
     height: 300px;
     padding: 16px;
     background-color: white;
     border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
     font-family: sans-serif;
     color: #1a1a1a;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .loader-card {
+        width: 100%;
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 425px) {
+    .loader-card {
+        width: 100%;
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 320px) {
+    .loader-card {
+        width: 100%;
+        max-width: 250px;
+    }
 }
