--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   gap: 2rem;
   overflow-y: scroll;
 
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-top: calc(env(safe-area-inset-top) + 2rem);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 2rem);
   box-sizing: border-box;
 }
